# my_patients

./: .dockerignore  .env  .gitignore  Cargo.toml  LOGBOOK.md  MIGRATION_ROADMAP.md  README.md  authorization_framework.md  docker-compose.yml  dockerfile  lifetimes_rust.md
.github/workflows/: ci.yml  claude-code-review.yml  deploy-production.yml
config/: development.yaml  production.yaml  test.yaml
examples/: playground.rs
frontend/: .env.development  .env.production  .gitignore  biome.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  Login.tsx  RegisterModal.tsx  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20250809_080459_remove_unnecessary_cols_from_users.rs  m20250820_151249_patients.rs  m20250820_152922_create_join_table_users_and_patients.rs  m20250902_193546_add_hashed_ssn_to_patients.rs  m20250907_000001_split_patient_name.rs  m20250910_203200_add_address_to_patients.rs  m20250912_161133_user_business_informations.rs  m20250912_195210_add_unique_constraint_user_business_info.rs  m20250913_125707_add_office_to_patient.rs  m20250921_200853_add_phone_number_to_user.rs  m20250921_201555_change_user_name_to_first_and_last_name.rs  m20250922_074830_create_practitioner_office_table.rs  m20250930_145445_add_signature_file_name_to_user_business_information.rs  m20251018_123530_add_email_to_patient.rs  m20251025_210751_remove_unique_constraints_from_patient_ssn.rs  m20251122_092542_add_user_id_to_patients.rs  m20251123_103746_create_medicale_appointments_table.rs  m20251129_135113_add_default_timestamps_to_medical_appointments.rs  (+8 more)
src/: app.rs  app_state.rs  config.rs  lib.rs  main.rs  router.rs
src/auth/: jwt.rs  (+5 more)
tests/: bdd.rs
(+164 files in other folders)
