[workspace]

[package]
name = "my_patients"
version = "1.0.7"
edition = "2021"
publish = false
default-run = "my_patients-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
axum-extra = { version = "0.10", features = ["form"] }
aes-gcm = "0.10.3"
base64 = "0.22.1"
argon2 = "0.5"
regex = "1.11"
once_cell = "1.20"
# Using printpdf for native Rust PDF generation
printpdf = "0.7"
lopdf = "0.32"
# HTTP client for Supabase storage
reqwest = { version = "0.12", features = ["json", "stream"] }
# Image processing for signature embedding
image = "0.25"
dotenvy = "0.15"

[[bin]]
name = "my_patients-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
